Add resistance stats

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -194,6 +194,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.CircleParticleGenerator",NewName="/Script/TurnBasedRPGCombat.CircleShapedSurface")
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.AbilityTarget",NewName="/Script/TurnBasedRPGCombat.AbilityTargetState")
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.PlayerCharacter",NewName="/Script/TurnBasedRPGCombat.PlayerCamera")
++ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.DamageNumbersWidget",NewName="/Script/TurnBasedRPGCombat.FloatingNumbersWidget")
++ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.FloatingDamageNumberWidget",NewName="/Script/TurnBasedRPGCombat.FloatingNumberWidget")
 
 [/Script/Engine.StreamingSettings]
 s.AsyncLoadingThreadEnabled=True
