--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="ConstantEffect.Undead",DevComment="")
 +GameplayTagList=(Tag="Effect.Buff.Heal",DevComment="")
 +GameplayTagList=(Tag="Effect.Buff.Shield",DevComment="")
 +GameplayTagList=(Tag="Effect.Debuff.OnFire",DevComment="")
