Change Flurry of Daggers ability to shoot all projectiles instantaneously

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,6 +196,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.PlayerCharacter",NewName="/Script/TurnBasedRPGCombat.PlayerCamera")
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.DamageNumbersWidget",NewName="/Script/TurnBasedRPGCombat.FloatingNumbersWidget")
 +ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.FloatingDamageNumberWidget",NewName="/Script/TurnBasedRPGCombat.FloatingNumberWidget")
++ClassRedirects=(OldName="/Script/TurnBasedRPGCombat.RPGSurface",NewName="/Script/TurnBasedRPGCombat.SurfaceActor")
 
 [/Script/Engine.StreamingSettings]
 s.AsyncLoadingThreadEnabled=True
