--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,9 +12,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Effect.Buff.Heal",DevComment="")
 +GameplayTagList=(Tag="Effect.Buff.Shield",DevComment="")
 +GameplayTagList=(Tag="Effect.Debuff.OnFire",DevComment="")
++GameplayTagList=(Tag="Effect.Debuff.Poisoned",DevComment="")
 +GameplayTagList=(Tag="Effect.Debuff.Slowed",DevComment="")
 +GameplayTagList=(Tag="Effect.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="Effect.Immunity.Stun",DevComment="")
 +GameplayTagList=(Tag="Surface.Fire",DevComment="")
 +GameplayTagList=(Tag="Surface.Oil",DevComment="")
++GameplayTagList=(Tag="Surface.Poison",DevComment="")
 
